# OCPP_Implementation

./: .dockerignore  .gitignore  .pytestignore  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  ocpp_server.py  pydantic_models.py
app/static/: index.html
scripts/: create_sample_data.py  truncate_data.py
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_ocpp_server.py  test_websocket.py
